--- a/Streamlit deployment/uyqu sifati classification model 2.ipynb
+++ b/Streamlit deployment/uyqu sifati classification model 2.ipynb
@@ -10,13 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5911d2bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv('sleep_cycle_productivity.csv')\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,6 +24,28 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split,KFold, cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3af492a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df=\u001b[43mpd\u001b[49m.read_csv(\u001b[33m'\u001b[39m\u001b[33msleep_cycle_productivity.csv\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('sleep_cycle_productivity.csv')"
    ]
   },
   {
@@ -1896,7 +1917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
