--- a/st_deploy/sleep_quality.ipynb
+++ b/st_deploy/sleep_quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d4117ee6",
    "metadata": {},
    "outputs": [
@@ -12,8 +12,9 @@
      "text": [
       "Decision Tree Classifier accuracy: 0.844\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000433 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000871 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 2098\n",
       "[LightGBM] [Info] Number of data points in the train set: 4000, number of used features: 14\n",
       "[LightGBM] [Info] Start training from score -1.611941\n",
@@ -40,7 +41,7 @@
        "['sleep_quality_model.joblib']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d2a26aa6",
    "metadata": {},
    "outputs": [],
