--- a/st_deploy/uyqu sifati classification model 2.ipynb
+++ b/st_deploy/uyqu sifati classification model 2.ipynb
@@ -1725,8 +1725,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7102d5df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import load"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "7f7a548e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7590a84d",
    "metadata": {},
    "outputs": [],
    "source": []
