--- a/st_deploy/final_updated_verison_with_EDA.ipynb
+++ b/st_deploy/final_updated_verison_with_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5911d2bc",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3af492a6",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,8 @@
    ],
    "source": [
     "df=pd.read_csv(r'/Users/user/ML course/2nd_month/project/sleep_cycle_productivity.csv')\n",
-    "df.head()"
+    "df.head()\n",
+    "a = 1"
    ]
   },
   {
@@ -2211,6 +2212,14 @@
     "# Make predictions\n",
     "predictions = predict_model(final_model, data=df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "823b159b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2229,7 +2238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
